# sdl_cmake_template

./: CMakeLists.txt  README.md  build.sh  renamer.sh
src/: main.cpp
